--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="24dp"
     android:paddingTop="16dp"
     tools:context=".fragments.FeedFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_view_profile"
+        android:layout_marginStart="24dp"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:src="@drawable/ic_outline_perfil_25"
@@ -19,13 +19,15 @@
     <EditText
         android:id="@+id/edit_text_new_post"
         android:layout_width="309dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_posts"
         android:layout_marginTop="14dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
