--- a/app/src/main/res/layout/item_adapter_post.xml
+++ b/app/src/main/res/layout/item_adapter_post.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:paddingHorizontal="24dp"
-    android:paddingVertical="13dp"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+ >
 
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="13dp"
         android:id="@+id/image_view_profile"
         android:layout_width="42dp"
         android:layout_height="42dp"
@@ -17,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:layout_marginEnd="24dp"
         android:id="@+id/text_view_name_profile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -27,17 +29,19 @@
         app:layout_constraintTop_toTopOf="@+id/image_view_profile" />
 
     <TextView
+        android:layout_marginEnd="24dp"
         android:id="@+id/text_view_date_post"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="9dp"
         android:layout_marginTop="7dp"
-        android:layout_height="wrap_content"
         android:text="Quinta-feira às 09:32"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_profile"
         app:layout_constraintTop_toBottomOf="@+id/text_view_name_profile" />
 
     <TextView
+        android:layout_marginHorizontal="24dp"
         android:id="@+id/text_view_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,5 +50,68 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_view_profile" />
+
+
+    <ImageView
+        android:layout_marginBottom="13dp"
+        android:layout_marginHorizontal="24dp"
+        android:id="@+id/image_view_like"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="13dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_baseline_favorite_border_20"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_post" />
+
+    <TextView
+        android:id="@+id/text_view_qtd_likes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="19999"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view_like"
+        app:layout_constraintStart_toEndOf="@+id/image_view_like" />
+
+    <TextView
+        android:id="@+id/text_view_likes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/likes"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_qtd_likes"
+        app:layout_constraintStart_toEndOf="@+id/text_view_qtd_likes" />
+
+    <ImageView
+        android:id="@+id/image_view_comment"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_marginStart="30dp"
+        android:src="@drawable/ic_baseline_chat_bubble_outline_24"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_likes"
+        app:layout_constraintStart_toEndOf="@+id/text_view_likes" />
+
+    <TextView
+        android:id="@+id/text_view_qtd_comments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="19999"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view_comment"
+        app:layout_constraintStart_toEndOf="@+id/image_view_comment" />
+
+    <TextView
+        android:layout_marginEnd="24dp"
+        android:id="@+id/text_view_coments"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/comments"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_qtd_comments"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/text_view_qtd_comments" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
