--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -26,14 +26,25 @@
         app:layout_constraintStart_toEndOf="@+id/image_view_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_posts"
+
+    <View
         android:layout_marginTop="14dp"
+        android:id="@+id/view_divider"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="@drawable/divider_post"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_post" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="14dp"
+        android:id="@+id/recycler_view_posts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_post" />
+        app:layout_constraintTop_toBottomOf="@+id/view_divider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
