--- a/app/src/main/res/layout/item_adapter_post.xml
+++ b/app/src/main/res/layout/item_adapter_post.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:paddingHorizontal="24dp"
+    android:paddingVertical="14dp"
     android:layout_height="wrap_content"
  >
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="13dp"
         android:id="@+id/image_view_profile"
         android:layout_width="42dp"
         android:layout_height="42dp"
@@ -18,34 +18,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_marginEnd="24dp"
+        style="@style/text_view_name_post"
         android:id="@+id/text_view_name_profile"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="9dp"
-        android:text="Pedro Bruno"
+        android:text="@string/name_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_profile"
         app:layout_constraintTop_toTopOf="@+id/image_view_profile" />
 
     <TextView
-        android:layout_marginEnd="24dp"
+        style="@style/text_view_date_post"
         android:id="@+id/text_view_date_post"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="7dp"
-        android:text="Quinta-feira às 09:32"
+        android:text="@string/date_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_profile"
         app:layout_constraintTop_toBottomOf="@+id/text_view_name_profile" />
 
     <TextView
-        android:layout_marginHorizontal="24dp"
+        style="@style/text_view_post"
         android:id="@+id/text_view_post"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
         android:text="Mais um trabalho realizado com sucesso. Obrigado ao aplicativo por proporcionar essa oportunidade"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,8 +43,7 @@
 
 
     <ImageView
-        android:layout_marginBottom="13dp"
-        android:layout_marginHorizontal="24dp"
+
         android:id="@+id/image_view_like"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -67,15 +56,14 @@
         app:layout_constraintTop_toBottomOf="@+id/text_view_post" />
 
     <TextView
+        style="@style/text_view_qtd_post"
         android:id="@+id/text_view_qtd_likes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="19999"
+        android:text="@string/qtd_aux"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_like"
         app:layout_constraintStart_toEndOf="@+id/image_view_like" />
 
     <TextView
+        style="@style/text_view_like_comment_post"
         android:id="@+id/text_view_likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,19 +83,15 @@
         app:layout_constraintStart_toEndOf="@+id/text_view_likes" />
 
     <TextView
+        style="@style/text_view_qtd_post"
         android:id="@+id/text_view_qtd_comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="19999"
-        android:layout_marginStart="8dp"
+        android:text="@string/qtd_aux"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_comment"
         app:layout_constraintStart_toEndOf="@+id/image_view_comment" />
 
     <TextView
-        android:layout_marginEnd="24dp"
+        style="@style/text_view_like_comment_post"
         android:id="@+id/text_view_coments"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:text="@string/comments"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_qtd_comments"
         app:layout_constraintEnd_toEndOf="parent"
