--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="yellow">#F6CB46</color>
+    <color name="date_color">#9D9D9D</color>
 </resources>
