--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,32 @@
         <item name="android:layout_marginStart">2dp</item>
     </style>
 
+    <style name="text_view_like_comment_name" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginStart">7dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+    </style>
+
+    <style name="text_view_like_comment" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/comment</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
+    <style name="text_view_like_date_comment" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">@color/date_comment</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_marginTop">11dp</item>
+    </style>
+
+
 </resources>
