Recuperação da lista ok

--- a/app/src/main/res/layout/action_bar_newpost.xml
+++ b/app/src/main/res/layout/action_bar_newpost.xml
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="17sp"
-        android:textColor="##262626" />
+        android:textColor="#262626" />
 
 </LinearLayout>
