--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -17,6 +17,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:clickable="true"
+        android:focusable="false"
         android:id="@+id/edit_text_new_post"
         android:layout_width="0dp"
         android:layout_height="0dp"
