--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,5 +74,29 @@
         <item name="android:layout_marginTop">11dp</item>
     </style>
 
+    <style name="edit_text_new_post" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:ems">10</item>
+        <item name="android:gravity">start|top</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textSize">20sp</item>
+    </style>
 
+
+    <style name="text_view_name_new_post" parent="Widget.AppCompat.TextView">
+
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:layout_marginEnd">24dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="fontFamily">@font/lato_semibold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
