--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="date_color">#9D9D9D</color>
     <color name="comment">#262626</color>
     <color name="date_comment">#95989A</color>
+    <color name="separator">#DBDBDB</color>
 </resources>
