--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -8,7 +8,7 @@
     tools:context=".fragments.PerfilFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/circleImageView"
+        android:id="@+id/image_view_perfil"
         android:layout_width="121dp"
         android:layout_height="121dp"
         android:src="@drawable/ic_outline_perfil_25"
@@ -17,12 +17,6 @@
         android:layout_marginTop="164dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:src="@drawable/ic_outline_create_24"
-        app:layout_constraintStart_toEndOf="@+id/circleImageView"
-        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
 
     <TextView
         android:id="@+id/text_view_name_perfil"
@@ -33,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
+        app:layout_constraintTop_toBottomOf="@+id/image_view_perfil" />
 
     <TextView
         android:id="@+id/text_view_qtd_posts"
